@@ -63,6 +63,8 @@ def _populate(parser, func):
     if argspec.varargs:
         raise TypeError('varargs in the signature of %s are not supported'
                         % func)
+    if argspec.args[0] == 'self':  # strip self
+        argspec.args[:] = argspec.args[1:]
     defaults = argspec.defaults or ()
     nodefaults = len(argspec.args) - len(defaults)
     alldefaults = (NODEFAULT,) * nodefaults + defaults
@@ -164,12 +166,16 @@ def pkg2dic(pkg):
     return dic
 
 
-def parser(funcdict, **kw):
+def parser(obj, **kw):
     """
-    :param funcdict: a function or a nested dictionary of functions
+    :param obj: a function or a nested dictionary of functions
     :param kw: keyword arguments passed to the underlying ArgumentParser
     :returns: the ArgumentParser instance
     """
+    if hasattr(obj, '__subcommands__'):
+        funcdict = {k: getattr(obj, k) for k in obj.__subcommands__}
+    else:
+        funcdict = obj
     if isinstance(funcdict, dict):
         version = funcdict.pop('__version__', None)
     else:
@@ -203,13 +209,13 @@ def _run(parser, argv=None):
     return func(**dic)
 
 
-def run(funcdict, argv=None, **parserkw):
+def run(obj, argv=None, **parserkw):
     """
-    :param funcdict: a function or a nested dictionary of functions
+    :param obj: a function or a (nested) dictionary of functions
     :param argv: a list of command-line arguments (if None, use sys.argv[1:])
     :param parserkw: arguments accepted by argparse.ArgumentParser
     """
-    return _run(parser(funcdict, **parserkw), argv)
+    return _run(parser(obj, **parserkw), argv)
 
 
 def runline(line, **parserkw):
