@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Internal: extended baselib.sap to manage command classes
   * Saved memory in ebrisk, now most calculations can be run with 2 GB
     of RAM per core
 
